--- a/2. Project_management.md
+++ b/2. Project_management.md
@@ -465,3 +465,83 @@ Be sure to take note of the motivation level of your team members and the impact
 ## 1.7 Prioritizing stakeholders and generating their buy-in
 
 learning to complete a stakeholder analysis and explain its significance. Let’s focus here on how to prioritize the various types of stakeholders that can exist on a project, generate stakeholder buy-in, and manage their expectations
+
+### stakeholder analysis
+
+key steps in the stakeholder analysis:
+
+1. Make a list of all the stakeholders the project impacts. When generating this list, ask yourself:
+    - Who is invested in the project? 
+    - Who is impacted by this project? 
+    - Who contributes to this project? 
+
+2. Determine the level of interest and influence for each stakeholder—this step helps you determine who your key stakeholders are. The higher the level of interest and influence, the more important it will be to prioritize their needs throughout the project. 
+
+3. Assess stakeholders’ ability to participate and then find ways to involve them. Various types of projects will yield various types of stakeholders—some will be active stakeholders with more opinions and touchpoints and others will be passive stakeholders, preferring only high-level updates and not involved in the day-to-day. 
+
+ **Pro tip:** You might want to form a steering committee during some projects. A steering committee is a collection of key stakeholders who have a high level of power and interest in a project. A steering committee can influence multiple departments within the organization, which means that they have the potential to release a greater number of resources to the project manager.  
+
+![alt text](image-3.png)
+
+#### Quadrant 1: High Influence, High Interest (Upper Right)
+
+Stakeholders in this quadrant have a significant influence on the project and are highly interested in its outcome. They can greatly impact project decisions and success. Examples might include project sponsors, key executives, or regulatory authorities. Responses for this quadrant include:
+
+1. Engagement and Involvement:
+
+    - Keep these stakeholders well-informed and engaged throughout the project lifecycle.
+    - Involve them in decision-making processes, seeking their input and feedback.
+    - Address their concerns promptly and effectively.
+
+2. Regular Communication:
+    - Schedule regular meetings or updates to keep them informed about project progress and any issues.
+    - Tailor communication to their preferences and needs to ensure they remain supportive and engaged.
+
+
+#### Quadrant 2: High Influence, Low Interest (Upper Left) 
+
+Stakeholders in this quadrant have high influence but may not be deeply interested in the day-to-day project details. They might include senior managers who need to be informed but may not be actively engaged. Responses for this quadrant include:
+
+1. Executive Summaries:
+    - Provide high-level summaries of project progress and key decisions for their review.
+    - Focus on the impact of the project on organizational goals and objectives.
+2. Periodic Updates:
+    - Provide periodic briefings or updates to ensure they are informed of major milestones and critical project changes.
+
+#### Quadrant 3: Low Influence, High Interest (Bottom Right) 
+
+Stakeholders in this quadrant have a high interest in the project but relatively low influence on its outcome. They are typically looking for updates and information about the project. Responses for this quadrant include:
+
+1. Regular Updates:
+    - Communicate project progress, risks, and updates to keep them engaged and informed.
+    - Address their queries and concerns promptly to maintain their interest.
+2. Stakeholder Feedback:
+    - Seek their feedback on project plans, progress, and outcomes to ensure their perspective is considered.
+
+
+#### Quadrant 4: Low Influence, Low Interest (Bottom Left)
+
+Stakeholders in this quadrant have low influence on the project and limited interest in its details. They might include lower-level employees or departments not directly impacted by the project. Responses for this quadrant include:
+
+1. General Communication:
+    - Share general updates about the project's overall progress without overwhelming them with details.
+    - Address any specific questions they may have, but avoid unnecessary inundation with project-related information.
+2. Minimal Engagement:
+    - Maintain a basic level of communication and engagement to keep them aware of the project without distracting them from their regular responsibilities.
+
+
+**Pro tip:** While these tools help organize information, they do not necessarily make the difference between successful and unsuccessful stakeholder engagement. What will make for successful stakeholder engagement is the project manager’s ability to know their stakeholders’ motivations and inspirations. This takes time, interpersonal skills, and insight into the organization’s internal political workings. Remember, each project is different, and your project may need tweaks along the way as you grow as a project manager. Making necessary changes means you are doing something right. Just make sure to check in and ensure that you are well on track, engaging your stakeholders successfully, and delivering on your project!
+
+#### Generating stakeholder buy-in 
+Once you organize and assess your stakeholders, it is time to start making some decisions on whose buy-in is absolutely necessary for success, whose requirements deserve the most attention, and what level of communication each stakeholder will require.
+
+Gaining key stakeholder buy-in is essential to ensuring that your project is not deprioritized or deprived of resources. 
+
+Tips for gaining key stakeholder buy-in include: 
+
+- Clearly mapping the work of the project to the goals of the stakeholder.
+- Describing how the project aligns with the goals of the stakeholder's department or team.
+- Listening to feedback from the stakeholder and finding ways to incorporate their feedback into the project's charter where appropriate.
+
+Manage your stakeholders’ expectations by presenting a realistic view of your team’s abilities. Do not over-promise and under-deliver! 
+
