--- a/2. Project_management.md
+++ b/2. Project_management.md
@@ -545,3 +545,33 @@ Tips for gaining key stakeholder buy-in include:
 
 Manage your stakeholders’ expectations by presenting a realistic view of your team’s abilities. Do not over-promise and under-deliver! 
 
+## 1.8 Building out a RACI chart
+A RACI chart can be an extremely effective way to define project roles, give direction to each team member and stakeholder, and ensure work gets done efficiently. Having a RACI chart available throughout the duration of your project as a quick visual can be invaluable.
+
+#### Elements of a RACI chart
+A RACI chart creates clear roles and gives direction to each team member and stakeholder. Over your career, you may hear a RACI chart referred to as a Responsibility Assignment Matrix (RAM), RACI diagram, or RACI matrix. The ultimate goal of this chart is to clarify each person’s role on your project. 
+
+First, let’s break down each of the roles people can be assigned:
+
+    R: Responsible: who gets the work done
+    A: Accountable: who makes sure the work is done
+    C: Consulted: who gives input or feedback on work
+    I: Informed: who needs to know the outcome
+
+![alt text](image-4.png)
+
+#### Responsible
+Individuals who are assigned the “responsible” role for a task are the ones who are actually doing the work to complete the task. Every task needs at least one responsible party. It’s a best practice to try to limit the number of team members assigned to a task’s  responsible role, but in some cases, you may have more than one. 
+
+A couple of questions to ask yourself when determining which person or people should be placed in the responsible role for a given task are:
+
+- What department does the work fall under?
+- Who will perform the work?
+
+It is helpful to evaluate the people on your team to determine the role that suits them. Remember that you may need to list roles rather than names, if some people take on more than one role. 
+
+Let’s dig deeper into our example with Office Green. Our task is to develop price points for the project, and the Financial Analyst will complete the work for this task. Therefore, we will list “Financial Analyst” in the responsible role for this task in the RACI chart.
+
+A section of a RACI chart, where the Financial Analyst is in the "responsible" role
+
+![alt text](image-5.png)
