--- a/2. Project_management.md
+++ b/2. Project_management.md
@@ -548,6 +548,10 @@ Manage your stakeholders’ expectations by presenting a realistic view of your 
 ## 1.8 Building out a RACI chart
 A RACI chart can be an extremely effective way to define project roles, give direction to each team member and stakeholder, and ensure work gets done efficiently. Having a RACI chart available throughout the duration of your project as a quick visual can be invaluable.
 
+#### When should you use a RACI chart?
+If you are wondering if you should use a RACI chart on your project, it is a good idea to evaluate the complexity of the effort. For example, if you have a very small project team with a small number of stakeholders, clearly defined roles, and a short timeline, introducing a RACI chart could possibly slow down the project. However, larger projects, or even projects that involve a large number of stakeholders, could greatly benefit from a RACI chart. It is always a good idea to work through the creation of a RACI chart and evaluate the outcome. Even if you do not end up using the RACI chart, you will have a better understanding of the project, and your effort will contribute to your project management experience overall.
+
+
 #### Elements of a RACI chart
 A RACI chart creates clear roles and gives direction to each team member and stakeholder. Over your career, you may hear a RACI chart referred to as a Responsibility Assignment Matrix (RAM), RACI diagram, or RACI matrix. The ultimate goal of this chart is to clarify each person’s role on your project. 
 
@@ -575,3 +579,108 @@ Let’s dig deeper into our example with Office Green. Our task is to develop pr
 A section of a RACI chart, where the Financial Analyst is in the "responsible" role
 
 ![alt text](image-5.png)
+
+#### Accountable
+The “accountable” person is responsible for making sure the task gets done. It is important to have only one individual accountable for each task. This helps clarify ownership of the task. The accountable person ultimately has the authority to approve the deliverable of the responsible party. 
+
+In order to determine who should be tagged as the accountable team member, consider:
+
+- Who will delegate the task to be completed?
+- Who will review the work to determine if the task is complete?
+
+You may encounter a situation where the responsible party is also accountable, but where possible, it is helpful to separate these roles. Ensuring that accountability is not shared ensures that there is no confusion on who the ownership belongs to.
+
+![alt text](image-6.png)
+
+#### Consulted
+Team members or stakeholders who are placed in the “consulted” role have useful information to help complete the task. There is no maximum or minimum number of people who can be assigned a “consulted” role, but it’s important that each person has a reason for being there.
+
+Here are a few ways you can help identify who is appropriate for the role:
+
+- Who will the task impact?
+- Who will have input or feedback for the responsible person to help the work be completed?
+- Who are the subject matter experts (SMEs) for the task?
+
+The consulted people will be in frequent, two-way communication with the responsible party, so it is key to make sure that the right people are in this role to help accomplish the task efficiently and correctly.
+
+Back to the project at Office Green, we’ve got a “responsible” Financial Analyst and an “accountable” Head of Finance. Who else would need to provide input on the product’s price points? Whose decisions and feedback will directly affect the task? The Director of Product will need to be consulted on the matter, as they oversee all product offerings. This person will have information about potential changes to the product and how these changes might affect price points.
+
+![alt text](image-7.png)
+
+ #### Informed 
+
+ Individuals who are identified as needing to be “informed” need to know the final decisions that were made and when a task is completed. It is common to have many people assigned to this category and for some team members to be informed on most tasks. Team members or stakeholders here will not be asked for feedback, so it is key to make sure people who are in this group only require status updates and do not need to provide any direct feedback for the completion of the effort. 
+
+Key questions to ask yourself in order to ensure that you have appropriately captured individuals in the “informed” role are:
+
+- Who cares about this task’s completion?
+- Who will be affected by the outcome?
+
+Now that you’ve determined who is responsible, accountable, and consulted on the Office Green project task, it is time to determine who needs to be informed about the task. Your Financial Analyst has set the price points with input from the Director of Product, and the Head of Finance has approved. You will now need to inform the Sales Team about the final price points, as they will need this information to sell the product. 
+
+![alt text](image-8.png)
+
+**Pro tip:** You could end up with a large number of team members and stakeholders who are placed in the “informed” role. If so, make sure that you have a plan to keep them informed that is not labor-intensive. Something as easy as view-only access to your project plan or meeting notes could prevent you from having to create separate communications along the way.  
+
+
+##### Key takeaway RACI 
+The RACI chart is a valuable tool. It can help you define and document project roles and responsibilities, give direction to each team member and stakeholder, and ensure work gets done efficiently. A RACI chart can also help you analyze and balance the workload of your team. While it may take many revisions to make sure that your team members and stakeholders are being placed into the right roles in your RACI chart, doing this work up front helps save time and prevent miscommunications later on. 
+
+![alt text](image-9.png)
+
+Example
+
+![alt text](image-10.png)
+
+#### Workload balance 
+Are there too many tasks assigned to one stakeholder? When you complete your chart, it is a good idea to go back through and tally the number of Rs assigned to each stakeholder. This can help you identify potentially overloading one team member with work. Using a RACI chart to determine responsibility for tasks can help mitigate single points of failure (known as creating silos, where the knowledge and responsibility for a task falls on one person) and allow you, as the project manager, to delegate tasks and avoid burnout. Maintaining workload balance is a critical part of project management. It is easy to fall into the pattern of relying on your top performers to keep the project moving forward. But this isn’t always healthy for the project or your team. If you find that you don’t have the right people to assign responsibilities to, take a step back and evaluate your team. 
+
+##### Put your RACI into practice
+Once you have created your RACI chart, it is time to put it into practice. You will first need to share your RACI chart with your sponsors and stakeholders to get buy-in and sign-off. When you get stakeholder buy-in, you will be able to set clear expectations for your team and ensure that everyone is aligned on their responsibilities. 
+
+You can document your team and stakeholders’ acknowledgment of these expectations through the project charter, meeting notes, and in the RACI chart itself. Think back to a time when you were expected to do something you did not agree with, or weren’t clear on. That disagreement or lack of clarity made it difficult to do your best work, right? Getting buy-in and continually checking in with your stakeholders and your team is the way to avoid this potential pitfall! 
+
+As you take the time to ensure that each task has an owner identified with the appropriate level of engagement, you are streamlining your communication and decision-making process over the life cycle of your project. 
+
+## 1.9 Why Projects fail: Initiation missteps
+
+You have been learning the necessary planning steps to take in order to set a project up for success. But despite your best efforts, projects can still fail. Sometimes the factors that lead to project failure are out of your control. The technology to complete the project is unavailable, for example, or a stakeholder decides to drastically change the goals of the project. However, there are factors that can lead to failure that are more in your control, such as being unable to complete the project deliverables within the agreed upon time or being unable to fulfill the stakeholder’s vision for the project.
+
+#### 1. Unclear expectations 
+You may remember the questions you need to answer at the start of the initiation phase of the project, including: 
+
+- What is the end goal? 
+- What are the expected deliverables and schedule? 
+- What is the budget? 
+- Who are the stakeholders? 
+
+Not taking the time at the beginning of a project to ask essential questions, document decisions, and understand the true scope of the project may lead to failure. After all, without directions, you can never reach your destination. 
+
+#### 2. Unrealistic expectations
+We all like to impress our managers, but sometimes, we accidentally agree to unrealistic expectations and set our projects up for failure from the start. For example, if a project is expected to take two weeks due to the level of detail and effort required but we try to complete it in one week, we will not have the resources available to meet the consolidated schedule. This will likely result in quality issues. It’s important to understand the requirements of a project before agreeing to any deadlines. As a best practice, don't commit to firm dates when initiating the project to avoid setting unrealistic expectations. You will have more information and will be able to better manage expectations in the planning phase.
+
+#### 3. Miscommunication
+Clear communication is key. If information is not communicated in a timely manner, does not include pertinent information (risks, decisions made, scope changes, etc.), or is not sent to the correct stakeholders, then you may be setting yourself up for failure. Conducting a stakeholder analysis and then utilizing a RACI chart to understand which stakeholders should be kept informed or consulted is a great start to creating an effective communication strategy.
+
+As a project manager, you do not necessarily have to cater to everyone’s unique communication styles, but you do have to set expectations about how communication will occur. As you are kicking off a project, make sure you take some time to understand the communication needs of your team and stakeholders. Some people dislike emails and would prefer to have a phone conversation, some prefer to have communication in writing, and some prefer face-to-face meetings. A strong communication system incorporates all of these methods. Set expectations for your communication approach early so that you, your team members, and your stakeholders have a clear understanding of how you will all communicate.
+
+#### 4. Lack of resources
+Resources include your team members, budget, and materials. Unfortunately, without proper planning, your resources can quickly be over-tasked or depleted. Sometimes project managers don’t account for the fact that team members are juggling multiple tasks and may not be able to devote the time necessary to complete all of their assigned tasks correctly and on time. Or, project managers may not realize that a specific skill set is required to complete certain tasks. Ensuring that the right team members are available at the right time is crucial.
+
+Another common error is to incorrectly calculate your project expenses. For example, imagine you have a project budget of $10,000. If your project requires $10,000 for materials and you also have to ship and install those materials, then you will not have enough money to complete your project. Clarify your resource needs and confirm their availability with leadership up front to avoid delays or issues further along in the project. 
+
+#### 5. Scope creep 
+The scope provides an overarching framework of what is and is not included in the project’s work and deliverables. Defining the scope in the initiation phase helps identify the resources needed, the cost associated with those resources, and the schedule required to complete the work. Sometimes projects fail because the scope of the project grows and impacts to the scope are not captured. 
+
+For example, imagine that you are given a project that originally includes three deliverables. During the course of the project, a stakeholder requests that two additional deliverables be included, but no changes are made to the schedule, budget, or team members to reflect the impact of the increased number of deliverables. As a project manager, when deliverables change, you have to make sure that you are capturing the potential impact of those changes to the schedule, budget, and quality. This is why it is so important to make sure that everything is documented in the initiation phase. Have a plan for how to handle scope creep if it occurs, and clarify who has the authority to approve scope changes.
+
+#### 6. Siloed Teams
+A promising initiative in product packaging design and printing ended in failure, primarily due to siloed teams. The downfall of this important work resulted from isolated departments operating independently, unaware of each other’s progress, goals, and challenges. The once-integrated vision fractured into disjointed efforts, leading to a project that crumbled under the weight.
+
+#### 7. Lack of leadership
+The primary reason behind the failure was the leadership vacuum. The absence of a decisive, visionary leader left the team without a north star, resulting in a rudderless ship navigating turbulent waters. Critical decisions were delayed or went unmade, and the project meandered aimlessly, eventually spiraling into a state of disorganized incompleteness.
+
+#### Key takeaway 
+Taking the time to clarify expectations—particularly around communication methods, resources available, and scope—during the initiation phase will increase the chances of your project’s success. Even if you follow these best practices, you may still encounter failure. Remember that in every failure, there is the opportunity to learn, grow, and do better the next time.
+
+[Failed projects article](https://project-management.com/7-lessons-to-learn-from-a-failed-project/)
