--- a/2. Project_management.md
+++ b/2. Project_management.md
@@ -684,3 +684,124 @@ The primary reason behind the failure was the leadership vacuum. The absence of 
 Taking the time to clarify expectations—particularly around communication methods, resources available, and scope—during the initiation phase will increase the chances of your project’s success. Even if you follow these best practices, you may still encounter failure. Remember that in every failure, there is the opportunity to learn, grow, and do better the next time.
 
 [Failed projects article](https://project-management.com/7-lessons-to-learn-from-a-failed-project/)
+
+
+
+## 1.10 Project charters: Elements and formats
+
+A project charter clearly defines the project and outlines the necessary details for the project to reach its goals. A well-documented project charter can be a project manager’s secret weapon to success. In this reading, we will go over the function, key elements, and significance of a project charter and learn how to create one. 
+
+The charter is the formal way that the project’s goals, values, benefits, and details are captured. You can think of the charter as the compass for your project since you will use it throughout the life cycle of the project. Many stakeholders will look to your project charter to ensure that you are indeed aligned with strategic goals and set up for achieving the desired end goal. Since the project charter carries so much importance, it is important to incorporate the right amount of detail while omitting miscellaneous elements.
+
+As with any of your project documents, it is a good idea to collaborate with your team and stakeholders early and often. Developing the project charter in collaboration with both groups can help you make sure that your project charter addresses your key stakeholders’ most important concerns and keeps your team aligned. Be sure to use the business case—the reason for initiating the project—as the guiding direction to your project charter. Project charters can vary from organization to organization and from project to project. It is key for a project manager to identify the best type of charter for the project in order to capture the relevant information and set your project up for success. 
+
+Project charters will vary but usually include some combination of the following key information:
+
+- introduction/project summary
+- goals/objectives 
+- business case/benefits and costs
+- project team
+- scope
+- success criteria
+- major requirements or key deliverables
+- budget
+- schedule/timeline or milestones
+- constraints and assumptions
+- risks
+- OKRs
+- approvals
+
+You will likely use many different project charter formats throughout your project management career. One example is a condensed, simplified document, like the one you'll learn about in the upcoming video and the one linked in the activities. A short and simple project charter can be used on smaller projects that are not very complex. 
+
+![alt text](image-11.png)
+
+For more complex projects, you may link to additional analysis or documents. You can house these items in the appendix. 
+
+Your organization may have a unique template for you to use, or you may have the flexibility to leverage one you come across in your career. As your project progresses, you may also encounter revisions to your project charter—and that is okay. Remember, it is a living document; let it grow with your project, and review and revisit it often to ensure you are aligned. 
+
+## 1.11 Introducing new tools to a team
+
+Project management tools and processes are always evolving. In this reading, we will discuss the importance of choosing the right tools for a project and the implications of introducing new tools to your team. 
+
+As a project manager, it is important to be open to implementing new tools that may be beneficial to a project's outcome. You will experience change in lots of forms throughout your project’s life cycle, and navigating change is essential. But if you choose to implement a tool that your team is unfamiliar with—especially if you decide to roll it out midway through a project—your team may be hesitant. People embrace change differently, particularly if the change will directly impact their routine and the way they work. Simply put: Change can be met with resistance.
+
+Before you introduce a new tool to your team, you should be sure that this change is actually going to benefit the project, and ensure that those involved in your project understand the benefits of this change. Demonstrating to your teammates and stakeholders that you understand the tool and have evaluated its competency will help build trust, especially if this new tool is replacing an existing tool. Taking the time to introduce the new tool to your team members will also demonstrate that you have the best interest of the team in mind—not just the success of the project. 
+
+Here are some important considerations and keys to successfully introducing new tools:
+
+- **Discuss the tool early and often, if possible.** The team should not feel blindsided by a new change. Make sure they know the change is coming as early as possible. This will help them prepare for an introduction or migration to the new tool.
+
+- **Ask for feedback from key stakeholders.** You could get great feedback on features that you may have overlooked by asking for their expertise. You can solicit this feedback by requesting their input about functionality or have them list features in order of priority. The key is to create an opportunity for stakeholders to provide their feedback and allow you to incorporate their feedback into next steps.
+
+- **Involve the key stakeholders in demonstrations as you get closer to making the final decision on the project tracking tool.** You will be able to leverage key stakeholders' acceptance by letting them test the product or sign up for a trial run. It is also important to make sure that the tool is actually going to meet the mark and provide a meaningful change for the project. You may want to pull in key users from your team to test and familiarize themselves with the tool prior to rolling it out. This will allow the team to get on board with your plans or discuss their concerns beforehand. This will also highlight in-house experts for future training, assistance, and implementation.
+
+- **Ensure the tool is fully functional before the team is introduced to it.** Whenever possible, hold off from introducing the tool if it still has any issues. Make sure the tool is accessible for all users. Keep in mind, your team members may resist a tool that doesn’t live up to how it is supposed to function. This will impact implementation and acceptance fairly significantly, so put your best tool forward!
+
+- **Set up training for the tool as needed before you ask the team to actually use it.** Everyone has different levels of comfort with different tools. It is your job as the project manager to ensure that each team members’ needs are addressed. Setting up training also helps create positive first impressions, which will lead to higher productivity and quicker, more successful implementation and acceptance.
+
+Remember, some pushback is normal, but successful project managers should take the steps to prepare and mitigate any friction for their team when possible. 
+
+**Pro tip:** If time allows, plan for a period of transition if you are replacing an existing tool. It is common to allow both tools to operate during this period. You will need to “sunset,” or retire, the existing tool eventually, but allowing for a period of transition between using the old tool and the new tool can help stakeholders and team members feel more at ease and give them time to gain familiarity with the new tool. Be prepared for productivity to be impacted as the team transitions from one tool to another.
+
+
+# 2. Putting it all together 
+
+## 2.1 Tips for leading a successful kick-off meeting
+
+A kick-off meeting is the first meeting among the project team, stakeholders, and the project sponsor at the start of a new project or new project phase. The purpose of a kick-off meeting is to ground everyone in a shared vision, ensure they understand the project’s goals and scope, and make sure that they are all on the same page about their roles and responsibilities on the project. The kick-off meeting is critical to a project’s overall success. It gets the team together to align on goals and visions for the project and sets the project up for success.
+
+#### Kick-off meeting best practices
+Set the right time. Choose a meeting time that works for everyone. Be mindful of time zone differences. 
+
+- **Set the right length.** Choose an appropriate meeting length—no more than one hour. You don’t want to waste people’s time, but you also don’t want to run out of time. Kick-off meetings work best when you first share key information and then spend any additional time on questions and team building.
+
+- **Invite the right people.** Be strategic about including the appropriate people. The goal is to invite attendees who play a role in the development and execution of the project, such as all team members, stakeholders, and the project sponsor. You don’t want to leave anyone out, but you also don’t want to invite people who shouldn’t be there.
+
+- **Designate a note taker.** The discussion that takes place during the meeting is important. It is critical that you document any feedback, changes, or questions asked by attendees. If you are leading the meeting, designate someone else to take notes before the meeting starts. You can also use tools like Chorus Notetaker, Google Keep, Google Docs, or Microsoft OneNote.  
+
+- **Set the agenda.** To recap what we discussed in the video, a kick-off meeting agenda should generally include: introductions, the project background and purpose, project goals and scope, roles and responsibilities, the collaboration process and project tools, what comes next (expectations and action items), and time for questions and discussion.
+
+- **Share the agenda.** Prior to the meeting, share the agenda with attendees via email and identify speakers for each topic. By sending the agenda in advance, everyone will have an idea of what to expect, time to prepare for anything they may need to present or discuss, and time to generate questions or ideas.
+
+- **Stick to the agenda.** During meetings, discussions can sometimes go off topic or take longer than expected. As a project manager, it is your job to keep the meeting on track by redirecting discussions to the items on the agenda. 
+
+- **Follow up after the meeting.** After the meeting, make sure to send out a meeting summary featuring the meeting notes and any action items. 
+
+
+## 2.2 Setting milestones: Best practices
+
+You have learned what milestones and tasks are and when, where, and how you will use them as a project manager. In this reading, we will explore best practices for setting milestones. But first, let’s revisit the definitions of tasks and milestones. 
+
+- A **project task** is an activity that needs to be accomplished within a set period of time and is assigned to one or more individuals for completion. The work of a project is broken down into many different project tasks. 
+
+- A **project milestone** is an important point within the project schedule that usually signifies the completion of a major deliverable. Milestones are significant checkpoints in your project, and keeping track of them helps ensure that your project is on schedule to meet its goals.
+
+
+#### Set tasks to identify milestones
+Setting tasks can help you clearly define milestones. You can do this in two ways:
+
+1. **Top-down scheduling:** In this approach, the project manager lays out the higher-level milestones, then works to break down the effort into project tasks. The project manager works with their team to ensure that all tasks are captured.
+
+2. **Bottom-up scheduling:** In this approach, the project manager looks at all of the individual tasks that need to be completed and then rolls those tasks into manageable chunks that lead to a milestone. 
+
+Most projects have many tasks that lead to milestones. For instance, if your milestone is to receive approval on the first draft of an article that you are writing, you might complete tasks such as “develop outline,” “write first draft,” and “send to the editor.” Then, you may have another set of tasks to achieve before reaching the milestone of revising the article. Milestones serve as check-in points along your project to make sure that you are headed in the right direction toward the end goal. Milestones also make projects more manageable.
+
+#### Integrate milestones into your project schedule
+There is not a consistent number of milestones in every project. Some projects will have a few milestones, while others may have dozens. Rather than aiming to hit a certain number of milestones, try to set milestones for the most important events in your project. Review your project schedule and identify important moments or checkpoints. In other words, pinpoint where in your project you will achieve major goals and make those points your milestones. 
+
+#### Milestone-setting pitfalls
+Here are some things to avoid when setting milestones: 
+
+- **Don’t set too many milestones.** When there are too many milestones, their importance is downplayed. And, if milestones are too small or too specific, you may end up with too many, making the project look much bigger than it really is to your team and stakeholders.  
+
+- **Don’t mistake tasks for milestones.** Remember that milestones should represent moments in time, and in order to map out how you will get to those moments, you need to assign smaller tasks to each milestone.
+
+- **Don’t list your milestones and tasks separately.** Make sure that tasks and milestones can be visualized together in one place, such as a project plan. This will help ensure that you are hitting your deadlines and milestones. 
+
+## 2.3 Breaking down the work breakdown structure
+
+**A work breakdown structure**(WBS) is a deliverable-oriented breakdown of a project into smaller components. It’s a tool that sorts the milestones and tasks of a project into a hierarchy, in the order they need to be completed. 
+
+A thorough WBS gives you a visual representation of a project and the tasks required to deliver each milestone. It makes it easier to understand all of the essential project tasks, such as estimating costs, developing a schedule, assigning roles and responsibilities, and tracking progress. Think of each piece of information as part of the overall project puzzle—you can’t successfully navigate through the tasks without understanding how they all fit together. For instance, many smaller tasks may ladder up to a larger task or milestone.
+
+![alt text](image-12.png)
