--- a/2. Project_management.md
+++ b/2. Project_management.md
@@ -805,3 +805,15 @@ Here are some things to avoid when setting milestones:
 A thorough WBS gives you a visual representation of a project and the tasks required to deliver each milestone. It makes it easier to understand all of the essential project tasks, such as estimating costs, developing a schedule, assigning roles and responsibilities, and tracking progress. Think of each piece of information as part of the overall project puzzle—you can’t successfully navigate through the tasks without understanding how they all fit together. For instance, many smaller tasks may ladder up to a larger task or milestone.
 
 ![alt text](image-12.png)
+
+
+#### Steps to build a WBS
+As a reminder, here are three main steps to follow when creating a WBS: 
+
+- **Start with the high-level, overarching project picture. Brainstorm with your team to list the major deliverables and milestones.** Example: Imagine you are planning a company event. Your major milestones might include categories like “secure venue,”  “finalize guest logistics,” and “establish agenda.”
+
+- **Identify the tasks that need to be performed in order to meet those milestones.** Example: You could break a milestone like “secure venue” down into tasks like “research venues,” “tour and decorate space,” “make down payment,” and so on. 
+
+- **Examine those tasks and break them down further into sub-tasks. ** Example: You could break down a task like “tour and decorate space” further into sub-tasks like “organize decorating committee,” “purchase decorations,” “assign decorating responsibilities,” and so on. 
+
+[Article: How to create a work breakdown structure and why you should](https://www.lucidchart.com/blog/how-to-create-a-work-breakdown-structure-and-why-you-should)
