--- a/2. Project_management.md
+++ b/2. Project_management.md
@@ -817,3 +817,57 @@ As a reminder, here are three main steps to follow when creating a WBS:
 - **Examine those tasks and break them down further into sub-tasks. ** Example: You could break down a task like “tour and decorate space” further into sub-tasks like “organize decorating committee,” “purchase decorations,” “assign decorating responsibilities,” and so on. 
 
 [Article: How to create a work breakdown structure and why you should](https://www.lucidchart.com/blog/how-to-create-a-work-breakdown-structure-and-why-you-should)
+
+
+## 2.4 Putting together the pieces of a project plan
+
+#### Project scope and goals
+Both the project scope and goals will be captured initially in your project charter, the document that clearly defines the key details of your project. You can link your project charter in your project plan. Having details about the project’s scope and goals easily accessible can help remind your team of the objectives they are trying to accomplish and if anything is asked of them that goes beyond what was initially agreed upon in order to achieve those objectives. 
+
+#### Work Breakdown Structure (WBS)
+As a reminder, a Work Breakdown Structure is a tool that sorts the milestones and tasks of a project in a hierarchy, in the order they need to be completed.  The WBS is key to your project plan since it breaks the work down into more manageable pieces. In your project plan, the tasks should be visible in one place with clear descriptions, owners, and due dates. This will allow you and your team to understand who is responsible for which tasks and when each task is supposed to be completed. Your project plan should also contain detailed milestones and statuses related to these tasks, which will help you and your team members visualize project progress. 
+
+In addition to the WBS, further documentation—such as a RACI chart—will help define roles and responsibilities and would be useful to add to your project plan. Keeping this documentation stored or linked in one place is a best practice for transparency and effective communication.
+
+#### Budget
+Throughout the life cycle of your project, the budget will need to be managed and monitored. The project budget is often linked to the project plan because it is heavily dependent on key elements of the project. Linking these components allows for smoother management and visibility. 
+
+Depending on the size of your project and your organization, you may not be the primary person responsible for managing the project budget. For instance, if your project is at a large organization and the funds are managed by another department, you may not have as much autonomy or insight into all of the budget elements. As a result, you may not be able to monitor the budget closely. If someone in another department is managing the budget, make sure to have regular check-ins with them to ensure that you are aware of how you are tracking.
+
+#### Management plans
+Management plans—such as the change management plan, risk management plan, and communication plan—are all integral to keeping a project organized and on track and should be linked in your project plan. These plans will be discussed in detail in the coming lessons of this course. 
+
+## 2.5 Critical Path
+
+The **critical path** refers to the list of required project milestones you must reach to complete the project schedule, as well as the mandatory tasks that contribute to the completion of each milestone. You can think of the critical path as a framework that tells you, the project manager, where you are, where you are headed, and when you will get there. 
+
+#### Why the critical path is critical
+The critical path helps you determine the essential tasks that need to be completed on your project to meet your end goal and how long each task will take. The critical path also provides a quick reference for critical tasks by revealing which tasks will impact your project completion date negatively if their scheduled finish dates are late or missed. A critical path can help you define the resources you need, your project baselines, and any flexibility you have in the schedule. 
+
+#### Step 1: Capture all tasks 
+When you first start working on your project schedule, you will capture all of the tasks associated with the completion of the effort. Remember to use the key planning documents you have created to get you to this point, such as your work breakdown structure (WBS). The main goal in this step is to make sure that you aren’t missing a key piece of work that is required to complete your project. When creating a critical path, focus on the essential, “need to do” tasks, rather than the “nice to do” tasks that aren’t essential for the completion of the project. Here is an example of critical tasks for building the structure of a house:
+
+![alt text](image-13.png)
+
+#### Step 2: Set dependencies 
+Now that you have captured all of your critical tasks in list form, arrange those tasks in order of completion by identifying dependencies. To determine dependencies, figure out which tasks must be completed before other tasks can start. For example, you can’t paint the outside of a house before the house is built, so the task of framing the walls must come before the task of painting them. Identifying dependencies is key to a successful project schedule. 
+
+To figure out dependencies for each task, ask:
+
+- Which task needs to take place before this task?
+- Which task can be finished at the same time as this task?
+- Which task needs to happen right after this task?
+
+Once you have answered these questions, you can list these dependencies next to your list of tasks:
+
+![alt text](image-14.png)
+
+
+#### Step 3: Create a network diagram
+One common way to visualize the critical path is by creating a network diagram. Network diagrams, like the example below, sequence tasks in the order in which they need to be completed, based on their dependencies. These diagrams help visualize:
+
+- The path of the work from the start of the project (excavation) to the end of the project (flooring)
+- Which tasks can be performed in parallel (e.g., HVAC and plumbing) and in sequence (e.g., plumbing then insulation)
+- Which non-essential tasks are NOT on the critical path
+
+![alt text](image-16.png)
