--- a/2. Project_management.md
+++ b/2. Project_management.md
@@ -870,4 +870,41 @@ One common way to visualize the critical path is by creating a network diagram. 
 - Which tasks can be performed in parallel (e.g., HVAC and plumbing) and in sequence (e.g., plumbing then insulation)
 - Which non-essential tasks are NOT on the critical path
 
-![alt text](image-16.png)
+![alt text](image-17.png)
+
+#### Step 4: Make time estimates
+After determining tasks and dependencies, consult key stakeholders to get accurate time estimates for each task. This is a crucial step in determining your critical path. If your time estimates are significantly off, it may cause the length of your critical path to change. Time estimates can be reviewed and updated throughout the project, as necessary. 
+
+![alt text](image-18.png)
+
+#### Step 5: Find the critical path 
+Now that you have your estimated durations for each task, add that information to your network diagram:
+
+If you add up the durations for all of your “essential” tasks and calculate the longest possible path, you can determine your critical path. In your calculation, only include the tasks that, if they go unfinished, will impact the project’s finish date. In this example, if the “non-essential” tasks—like landscaping and driveway pavement—are not completed, the house structure completion date will not be impacted. 
+
+You can also calculate the critical path using two common approaches: the forward pass and the backward pass. These techniques are useful if you are asked to identify the earliest and latest start dates (the earliest and latest dates on which you can begin working on a task) or the slack (the amount of time that task can be delayed past its earliest start date without delaying the project).
+
+- The **forward pass** refers to when you start at the beginning of your project task list and add up the duration of the tasks on the critical path to the end of your project. When using this approach, start with the first task you have identified that needs to be completed before anything else can start. 
+
+- The **backward pass** is the opposite—start with the final task or milestone and move backwards through your schedule to determine the shortest path to completion. When there is a hard deadline, working backwards can help you determine which tasks are actually critical. You may be able to cut some tasks—or complete them later—in order to meet your deadline.  
+
+You can read more about each of these concepts and critical path calculation methods in the following articles:
+
+- [How to Use the Critical Path Method for Complete Beginners](https://www.workamajig.com/blog/critical-path-method)
+- [Critical Path Method: A Project Management Essential](https://www.wrike.com/blog/critical-path-is-easy-as-123/)
+
+
+## 2.6 Creating a project plan: Tools and templates
+Project plans are critical because they are used to capture the scope and time it takes to complete a project. The project plan is essentially the project’s blueprint—it lays out all of the activities and milestones that your team needs to achieve in order to successfully complete the project. Project plans come in various shapes, sizes, and forms. Depending on the project you are managing, the template you use may vary, and some companies even have standard templates they require their project managers to use. Regardless of what tool you use, be sure to include this key information: 
+
+- **Task ID numbers or task names:** You might end up with dozens, hundreds, or even thousands of tasks in a project. Assigning a task ID or name makes it easy to find and reference a task when communicating with team members and stakeholders. 
+
+- **Task durations:** A task duration is the amount of time you estimate that task should take. Adding task durations to your project plan helps you organize and prioritize the tasks in the project to help ensure you hit your goal on time. 
+
+- **Start and finish dates:** Including start and finish dates for each task helps you track whether you are progressing on time or not. 
+
+- **Who is responsible for what:** Including each team member’s role and responsibilities helps promote clarity and efficiency. As a best practice, assign an owner to each task, as well.
+
+[Google Project Plan Timeline Template](https://docs.google.com/spreadsheets/d/1TauRTFipsWDWGqaw6tmqJeknKhVI5IjR5jJvBfVzfGw/template/preview)
+
+## 2.7 Project budgeting 101
